force-app/main/default/objects/Water_Use__c/Water_Use__c.object-meta.xml
<CustomObject>
    <label>Water Use</label>
    <nameField>
        <label>Water Use Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Water Uses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>