force-app/main/default/objects/Water_Use__c/fields/Area_with_Water_Stress__c.field-meta.xml
<CustomField>
    <fullName>Area_with_Water_Stress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Area with Water Stress</label>
    <type>Checkbox</type>
</CustomField>