force-app/main/default/objects/Water_Use__c/fields/Asset_LatLong__c.field-meta.xml
<CustomField>
    <fullName>Asset_LatLong__c</fullName>
    <label>Asset LatLong</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>