force-app/main/default/objects/Water_Use__c/fields/Beginning_Total_Water_Storage__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Total_Water_Storage__c</fullName>
    <label>Beginning Total Water Storage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>