force-app/main/default/objects/Water_Use__c/fields/Change_in_Water_Storage__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Water_Storage__c</fullName>
    <formula>(Ending_Total_Water_Storage__c -  Beginning_Total_Water_Storage__c)
/
CASE( Withdrawal_Unit__c, 
 	&quot;CCF&quot;, 353.147,
 	&quot;Gallons&quot;, 264172,
	&quot;Liters&quot;, 1000000,
	1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change in Water Storage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>