force-app/main/default/objects/Water_Use__c/fields/Discharge_Location__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Location__c</fullName>
    <label>Discharge Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>