force-app/main/default/objects/Water_Use__c/fields/Groundwater_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Groundwater_Discharge__c</fullName>
    <label>Groundwater Discharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>