force-app/main/default/objects/Water_Use__c/fields/Organization_Asset__c.field-meta.xml
<CustomField>
    <fullName>Organization_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Asset</label>
    <referenceTo>sustain_app__Asset__c</referenceTo>
    <relationshipLabel>Water Uses</relationshipLabel>
    <relationshipName>Water_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>