force-app/main/default/objects/Water_Use__c/fields/Produced_Other_Water_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Produced_Other_Water_Withdrawal__c</fullName>
    <label>Produced Other Water Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>