force-app/main/default/objects/Water_Use__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>