force-app/main/default/objects/Water_Use__c/fields/Seawater_Freshwater_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Seawater_Freshwater_Withdrawal__c</fullName>
    <label>Seawater Freshwater Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>