force-app/main/default/objects/Water_Use__c/fields/Source_Aquifer__c.field-meta.xml
<CustomField>
    <fullName>Source_Aquifer__c</fullName>
    <label>Source Aquifer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>