force-app/main/default/objects/Water_Use__c/fields/Source_Basin__c.field-meta.xml
<CustomField>
    <fullName>Source_Basin__c</fullName>
    <label>Source Basin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>