force-app/main/default/objects/Water_Use__c/fields/Source_Subbasin__c.field-meta.xml
<CustomField>
    <fullName>Source_Subbasin__c</fullName>
    <label>Source Subbasin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>