force-app/main/default/objects/Water_Use__c/fields/Surface_Water_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Surface_Water_Discharge__c</fullName>
    <label>Surface Water Discharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>