force-app/main/default/objects/Water_Use__c/fields/Surface_Withdrawal_total__c.field-meta.xml
<CustomField>
    <fullName>Surface_Withdrawal_total__c</fullName>
    <formula>(Surface_Freshwater_Withdrawal__c + Surface_Other_Water_Withdrawal__c) 
/ 
	 CASE( Withdrawal_Unit__c, 
	 	&quot;CCF&quot;, 353.147,
	 	&quot;Gallons&quot;, 264172,
		&quot;Liters&quot;, 1000000,
		1
	 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surface Withdrawal (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>