force-app/main/default/objects/Water_Use__c/fields/Third_party_Freshwater_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Third_party_Freshwater_Withdrawal__c</fullName>
    <label>Third-party Freshwater Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>