force-app/main/default/objects/Water_Use__c/fields/Third_party_Water_Discharge_total__c.field-meta.xml
<CustomField>
    <fullName>Third_party_Water_Discharge_total__c</fullName>
    <label>Third-party Water Discharge (total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>