force-app/main/default/objects/Water_Use__c/fields/Third_party_Water_sent_for_use__c.field-meta.xml
<CustomField>
    <fullName>Third_party_Water_sent_for_use__c</fullName>
    <label>Third-party Water sent for use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>