force-app/main/default/objects/Water_Use__c/fields/Total_Other_Water_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Water_Discharge__c</fullName>
    <label>Total Other Water Discharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>