force-app/main/default/objects/Water_Use__c/fields/Total_Water_Discharge_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Water_Discharge_ML__c</fullName>
    <formula>(Surface_Water_Discharge__c +  Groundwater_Discharge__c +  Seawater_Discharge__c +  Third_party_Water_Discharge_total__c)
/ 
CASE( Withdrawal_Unit__c, 
 	&quot;CCF&quot;, 353.147,
 	&quot;Gallons&quot;, 264172,
	&quot;Liters&quot;, 1000000,
	1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total  Water Discharge (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>