force-app/main/default/objects/Water_Use__c/fields/Total_Water_Withdrawal_ML__c.field-meta.xml
<CustomField>
    <fullName>Total_Water_Withdrawal_ML__c</fullName>
    <formula>Surface_Withdrawal_total__c +
Groundwater_Withdrawal_total__c +
Seawater_Withdrawal_total__c +
Produced_Withdrawal_total__c +
Third_party_Withdrawal_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Water Withdrawal (ML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>