force-app/main/default/objects/Water_Use__c/fields/Water_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Water_Risk_Level__c</fullName>
    <formula>TEXT(Organization_Asset__r.Overall_Total_Water_Risk__c)</formula>
    <label>Water Risk Level</label>
    <type>Text</type>
</CustomField>