force-app/main/default/objects/Water_Use__c/fields/Water_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Water_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Water Supplier</label>
    <referenceTo>Water_Supplier__c</referenceTo>
    <relationshipLabel>Water Uses</relationshipLabel>
    <relationshipName>Water_Uses</relationshipName>
    <type>Lookup</type>
</CustomField>