force-app/main/default/objects/Water_Use__c/fields/Withdrawal_Unit__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Unit__c</fullName>
    <label>Withdrawal Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCF</fullName>
                <default>true</default>
                <label>CCF</label>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>