force-app/main/default/objects/Water_Use__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Water_Supplier__c</columns>
    <columns>Organization_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>